<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="workout">Workout</string>
    <string name="add_new_workout">Add New Workout</string>
    <string name="edit">Edit</string>
    <string name="exercise_progress">"Exercise Progress: "</string>
    <string name="workout_progress">"Workout Progress: "</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="seconds">seconds</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="duration">"Duration: "</string>
    <string name="voice">"Voice: "</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="app_title">Workout App</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="title_activity_edit_workout">EditWorkoutActivity</string>
    <string name="title_activity_edit_exercise">EditExerciseActivity</string>
    <string name="title_activity_workout_item">WorkoutItemActivity</string>
    <string name="title_activity_adapter">Adapter</string>
    <string name="title_activity_edit_workout_item">EditWorkoutItemActivity</string>

</resources>
