<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eeRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/eeTitleOfExerciseET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="Title of Exercise"
        android:textSize="24sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/eeDurationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/eeSecondsET"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/eeTitleOfExerciseET"
        android:gravity="center_vertical"
        android:text="@string/duration"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eeUnitsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/eeSecondsET"
        android:layout_below="@+id/eeTitleOfExerciseET"
        android:layout_toRightOf="@+id/eeSecondsET"
        android:gravity="center_vertical"
        android:text="@string/seconds"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eeVoiceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/eeDurationTV"
        android:layout_below="@+id/eeDurationTV"
        android:gravity="center_vertical"
        android:text="@string/voice"
        android:textSize="20sp" />

    <Button
        android:id="@+id/eePlayBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/play" />

    <Button
        android:id="@+id/eeRecordBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eePlayBTN"
        android:layout_alignBottom="@+id/eePlayBTN"
        android:layout_toLeftOf="@+id/eePlayBTN"
        android:text="@string/record" />

    <Button
        android:id="@+id/eeDeleteRecordingBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eePlayBTN"
        android:layout_alignBottom="@+id/eePlayBTN"
        android:layout_toRightOf="@+id/eePlayBTN"
        android:text="@string/delete" />

    <Button
        android:id="@+id/eeSaveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/eeDeleteBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/eeSaveBTN"
        android:text="@string/delete" />

    <EditText
        android:id="@+id/eeSecondsET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eeTitleOfExerciseET"
        android:layout_toRightOf="@+id/eeDurationTV"
        android:ems="3"
        android:gravity="center_vertical|center_horizontal"
        android:hint="0"
        android:inputType="number"
        android:textSize="20sp" />

</RelativeLayout>
